[package]
name = "cfg-exclusive"
version = "0.0.1"
edition = "2021"
description = "A procedural macro for defining mutually exclusive cfg attributes."
documentation = "https://docs.rs/cfg-exclusive/"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kbknapp/cfg-exclusive"
rust-version = "1.60.0"  # MSRV
include = [
	"src/**/*",
	"Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
	"README.md"
]
keywords = [
	"proc-macro",
	"cfg",
	"features",
	"exclusive",
]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
